--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
 
     <div id="questionContainer">
-        <h2>Do you like this game?</h2>
+        <h2>Do you like me?</h2>
         <button id="yesBtn">Yes</button>
         <button id="noBtn">No</button>
     </div>
