--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 <body>
 
     <div id="questionContainer">
-        <h2>Do you like me?</h2>
+        <h2>🥺Bati na tayo please?🥺</h2>
         <button id="yesBtn">Yes</button>
         <button id="noBtn">No</button>
     </div>
 
     <div id="resultContainer">
-        ❤️ I knew it! ❤️  
+        ❤️ yes bati na tau im happy na ❤️  
         <br>
         <img id="resultGif" src="" alt="Reaction GIF">
     </div>
